@@ -1,3 +1,7 @@
+2003-10-18 Craig Franklin <craigfranklin@comcast.net>
+  * Fixed a bug in 16xx special instruction mnemonics that could cause
+    an incorrect branch calculation if a goto proceded the mnemonic.
+
 2003-10-17 Craig Franklin <craigfranklin@comcast.net>
   * gputils 0.11.7 Released.
 
